Fix whitespace breaking with man-link, minor CSS enhancements

--- a/css/rouge.css
+++ b/css/rouge.css
@@ -108,7 +108,7 @@
   font-weight: bold;
 }
 .highlight .nt {
-  color: #ffb000;
+  color: #D29100;
   font-weight: bold;
 }
 .highlight .m, .highlight .mf, .highlight .mh, .highlight .mi, .highlight .il, .highlight .mo, .highlight .mb, .highlight .mx {
